suitably amateurish fix for overflow-x woes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden; /* @todo improve this */
+}
+
 .flake,
 .tweet {
     position:absolute;
